@@ -1,4 +1,5 @@
 3.0.11
+ * Fix CommitLogSegmentManagerTest (CASSANDRA-12283)
  * Pass root cause to CorruptBlockException when uncompression failed (CASSANDRA-12889)
  * Fix partition count log during compaction (CASSANDRA-12184)
 
